Corrijo y agrego soluciones de IS1

--- a/4 Ano/Ingenieria del Software I/Soluciones/Practica 1.lyx
+++ b/4 Ano/Ingenieria del Software I/Soluciones/Practica 1.lyx
@@ -4262,7 +4262,10 @@ Solución
 \end_layout
 
 \begin_layout Standard
-COMPLETAR.
+La promoción de operaciones de caja de ahorros a banco esta diseñada para
+ modificar el estado.
+ En este caso se modifica el valor original por el mismo valor, lo cual
+ puede resultar confuso.
 \end_layout
 
 \end_deeper
